<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">珞珈足迹</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_frame">地图搜索</string>
    <string name="search_position">位置搜索</string>
    <string name="search_route">路线搜索</string>
    <string name="my_position">我的位置</string>
    <string name="search_text">搜索</string>
    <string name="search_the_route">查找路线</string>
    <string name="input_destination">输入终点</string>
    <string name="count_down_text_1">距离校庆 </string>
    <string name="count_down_text_2"> 天</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="load_ing">加载中···</string>
    <string name="get_data_error">获取数据失败，请重试</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_building">珞珈风光</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="scheudle_message">活动说明： </string>
    <string name="schedule_host">责任单位： </string>
    <string name="main_menu_about_us">关于我们</string>
    <string name="main_menu_feedback">意见反馈</string>
    <string name="main_menu_settings">功能设置</string>
    <string name="fail_to_send_email">对不起，请检查是否安装了Email Apps!</string>
    <string name="contribute">没有新文章啦，点击右上角去投稿吧~！</string>
    <string name="contribute_title">投稿</string>
    <string name="title_activity_whuzheng_wen">校庆征文</string>
    <string name="title_activity_settings">功能设置</string>
    <string name="no_location">没有定位信息,请检查网络</string>

    <!-- 以下为settingsActivity中用到的一些设置名称 -->
    <string name="map_settings">地图设置</string>
    <string name="suo_fang">启用缩放按钮</string>
    <string name="suo_fang_detail">是否在地图上显示+/-表示缩放</string>
    <string name="biao_chi">启用比例尺</string>
    <string name="biao_chi_detail">是否在地图上显示标尺</string>
    <string name="zhi_nan_zhen">启用指南针</string>
    <string name="zhi_nan_zhen_detail">是否在地图上显示指南针</string>
    <string name="shou_shi_all">启用所有手势</string>
    <string name="shou_shi_all_detail">是否支持所有手势</string>
    <string name="shou_shi_rotate">启用手势旋转</string>
    <string name="shou_shi_rotate_detail">是否允许通过手势来旋转地图</string>
    <string name="shou_shi_scroll">启用手势移动</string>
    <string name="shou_shi_scroll_detail">是否允许通过手势移动地图</string>
    <string name="shou_shi_tilt">启用手势倾斜</string>
    <string name="shou_shi_tilt_detail">是否允许通过手势来倾斜地图</string>
    <string name="shou_shi_suo_fang">启用手势缩放</string>
    <string name="shou_shi_suo_fang_detail">是否允许通过手势来缩放地图</string>
    <string name="title_activity_about_us">关于我们</string>
    <string name="hello_world">Hello world!</string>
    <string name="team">团队名称</string>
    <string name="team_name">Fb Team</string>
    <string name="team_name_detail">Just coding for fun!</string>
    <string name="member">团队成员</string>
    <string name="member_name_one">Coder</string>
    <string name="menuber_name_one_detail">\@forever-KB24</string>
    <string name="member_name_two">Coder</string>
    <string name="member_name_two_detail">\@flsf</string>
    <string name="contact">联系我们</string>
    <string name="send_email">发送邮件</string>
    <string name="contact_detail">UI我们在努力T_T~~</string>
    <string name="fail_to_launch_browser">请安装浏览器哦~~</string>
    <string name="image_content_description">图片描述</string>
    <string name="xiao_qing_kou_hao">珞珈传雅韵     百甘聚归鸿</string>
    <string name="title_activity_zheng_wen_introduction">校庆征文</string>
    <string name="volunteer">志愿者服务点</string>
    <string name="click_and_go">点击到那里去</string>

</resources>
